# mastring

./: CHANGELOG.md  Cargo.toml  README.md  coverage.sh
examples/: demo.rs
src/: bytestring.rs  bytestringbuilder.rs  customcow.rs  fromiter.rs  inner.rs  join.rs  lib.rs  lib.rs.bak  limitedusize.rs  string.rs  stringbuilder.rs
tests/: bytestring.rs  bytestringbuilder.rs  customcow.rs  string.rs  stringbuilder.rs
