[package]
name = "mastring"
version = "0.1.0"
edition = "2021"
authors = ["Peter Michael Green <plugwash@debian.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/plugwash/mastring"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
